--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/main.js"></script>
 </body>
 
 </html>
