- Replacing the card template with a card builder function. - Improving app responsiveness. - Adding a getPokemonDetails method to the pokemon service. - Visualizing the data of the first twenty pokemon on page load.

--- a/client/index.html
+++ b/client/index.html
@@ -15,38 +15,7 @@
     <h1>Pokemon Battle Simulator</h1>
   </header>
 
-  <section class="pokemon-container">
-    <div class="pokemon-card">
-      <div class="pokemon-sprite">
-        <img src="https://i.pinimg.com/originals/cb/33/49/cb3349b86ca661ca61ae9a36d88d70d4.png" alt="Pokemon Sprite">
-      </div>
-
-      <div class="pokemon-info">
-        <div class="pokemon-name">
-          <h1>Pikachu</h1>
-          <p>Ability: Lightning-Rod</p>
-        </div>
-
-        <div class="pokemon-stats">
-          <p>Speed: 90</p>
-          <p>Special Defense: 50</p>
-          <p>Special Attack: 50</p>
-          <p>Defense: 40</p>
-          <p>Attack: 55</p>
-          <p>HP: 35</p>
-        </div>
-      </div>
-
-      <div class="pokemon-moves">
-        <p>Move 1: Mega Punch</p>
-        <p>Move 2: Pay Day</p>
-      </div>
-      <div class="pokemon-moves">
-        <p>Move 3: Thunder Punch</p>
-        <p>Move 4: Slam</p>
-      </div>
-    </div>
-  </section>
+  <section class="pokemon-container"></section>
 
   <script type="module" src="./scripts/main.js"></script>
 </body>
