--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 
   <title>Pokemon Game</title>
 
+  <link rel="shortcut icon" href="assets/images/great-ball.png">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
