Successfully loading the player and opponent sprites on the canvas. Improved canvas responsiveness.

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
     <h1>Pokemon Battle Simulator</h1>
   </header>
 
+  <section class="canvas-container"></section>
   <section class="pokemon-container"></section>
 
   <script type="module" src="./scripts/main.js"></script>
