Adding a spinner that is visible while the pokemon cards are loading.

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,10 @@
     <h1>Pokemon Battle Simulator</h1>
   </header>
 
+  <section class="spinner-container">
+    <div class="spinner"></div>
+  </section>
+
   <section class="canvas-container"></section>
   <section class="pokemon-container"></section>
 
