Reduced the initial loading time of the app.
- Added a new method for fetching multiple API requests for pokemon details, which is much faster than the old one.
- Refactored the generatePokemonCards method.
- Wrapped the PokemonService fetch functions inside try-catch blocks.

- Removed the EventListeners class.
- The resize canvas event listener was moved to the PokemonBattleground class.
- The start battle event listener was moved to the PokemonSelection class.

- Increased the size of the pokemon cards on larger screens.
- The spinner size now scales depending on the screen width.
- The pokemon attack animation speed now scales depending on the screen width.

--- a/client/index.html
+++ b/client/index.html
@@ -16,12 +16,12 @@
     <h1>Pokemon Battle Simulator</h1>
   </header>
 
-  <section class="spinner-container">
-    <div class="spinner"></div>
-  </section>
-
   <section class="canvas-container"></section>
   <section class="pokemon-container"></section>
+
+  <section class="loading-container">
+    <div class="spinner"></div>
+  </section>
 
   <script type="module" src="./scripts/main.js"></script>
 </body>
